# convo-map

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
convo_map/: mapping.py  pipeline.py  prompts.py  transcribe.py
convo_map/phi2/: README.md
convo_map/phi2/mlx_model/: config.json
convo_map/whisper/: README.md
notebooks/: WhisperX.ipynb
outputs/e1bba656-61f9-4dca-a563-2f1fe2a00f54/: output.txt  used_prompt.txt
resources/: diarized-whisper-large-v2-cordial-curiosity.json  diarized-whisper-large-v2-tia.txt  fal-whisper.txt  processed.json  processed_diarized_whisper.json  stripped_script.json  transcript-whisper-turbo-tiny.json  undiarized-whisper-large-v2-cordial-curiosity.txt  undiarized-whisper-large-v2-tia.txt  whisper-large.txt  whisper-tiny.txt
scripts/: process_whisper.py
